// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expressions ref is between two range 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE Foo.x regexp ?",
  "values": [
    "/\\d/",
  ],
}
`;

exports[`expressions ref is in list of sub select 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE Foo.x IN (SELECT Foo2.name FROM Foo2 as Foo2)",
  "values": [],
}
`;

exports[`expressions ref is like pattern 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE Foo.x like ?",
  "values": [
    "%123",
  ],
}
`;

exports[`expressions ref is regular expression 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE Foo.x between 1 and 20",
  "values": [],
}
`;

exports[`expressions ref list with multiple refs is in list of sub select 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE (Foo.x,Foo.b) IN (SELECT Foo2.ID,Foo2.name FROM Foo2 as Foo2)",
  "values": [],
}
`;

exports[`expressions ref list with one ref is in list of sub select 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE (Foo.x) IN (SELECT Foo2.name FROM Foo2 as Foo2)",
  "values": [],
}
`;

exports[`expressions with complex xpr 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE (Foo.x < 9) AND (Foo.x > 1)",
  "values": [],
}
`;

exports[`expressions with exists 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE exists (SELECT Foo2.name FROM Foo2 as Foo2) or not exists (SELECT Foo22.name FROM Foo2 as Foo22)",
  "values": [],
}
`;

exports[`expressions with long xpr 1`] = `
{
  "sql": "SELECT Foo.ID,Foo.a,Foo.b,Foo.c,Foo.x FROM Foo as Foo WHERE Foo.x < 9 AND Foo.x > 1",
  "values": [],
}
`;
